project2_ws/log/build_2023-10-05_21-05-52/project2_tam/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/samuel/ros2_humble/CSCE452-samuel.fafel/project2_ws/install/project2_tam/lib/python3.10/site-packages/project2_tam/project2.py", line 169
    	def move_to_target(self, turtle_name, self.Turtle_Poses[turtle_name], point, tolerance=0.1):
    	                                          ^
SyntaxError: invalid syntax

